--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-
     // Dependencies for working with Architecture components
     // You'll probably have to update the version numbers in build.gradle (Project)
+
+    implementation "org.mongodb:bson:2.3"
 
 // Room components
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
