--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".actitivies.RegisterActivity"></activity>
+
         <service
             android:name=".actitivies.FetchAddressIntentService"
             android:exported="false" />
@@ -22,13 +23,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".actitivies.ui.routes.Routes"></activity>
+        <activity android:name=".actitivies.ui.routes.Routes" />
         <activity
             android:name=".actitivies.NavActivity"
             android:label="@string/title_activity_nav"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".actitivies.LoginActivity" />
-        <activity android:name=".actitivies.MapsActivity">
+        <activity android:name=".actitivies.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
